frontend/materialize/sass/components/main.scss
html, body, .table-container{
  height: 100%;
}

/* Navigation Styles Below */

.table-container {
  display: table;
}
.table-container .table-row {
  height: 100%;
  display: table-row;
}
.table-container .table-row .table-col {
  display: table-cell;
  float: none;
  vertical-align: top;
}
.fixed-nav{
	@extend .z-depth-1;
}
/* Map and map control styles below */
#map {
  z-index:2;
  height:100%;
	.btn{
		color:white !important;
	}
}
#map-container{
  .map-start-btn{
    position: absolute;
    bottom: 20%;
    left: 0;
    right: 0;
    margin-left: auto;
    margin-right: auto;
  }
  .user-profile{
    position: absolute;
    top: 5%;
    right: 10%;
  }
}

/* Top Nav Bar Style */
#top-nav{
  overflow: hidden;
}

/* Selection dialog column padding */
.right-padding{
  padding-right:10px;
}

/* Typeahead Styles */

/* Overriding the materialize input to allow more padding down below */
.distContainer{
  .input-field{
    box-shadow: 0 62px 0 0 $secondary-color-light !important;
    height: 2px !important;
  }
} 

/* Since typeahead wraps the input elements in this span */
span.twitter-typeahead{
  width: 100%;
}

.tt-query {
  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
     -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
}

.tt-hint {
  color: #999
}

.tt-dropdown-menu {
  width: 100%;
  margin: 12px 0;
  padding: 8px 0;
  background-color: #fff;
  border: 1px solid #ccc;
  border: 1px solid rgba(0, 0, 0, 0.2);
  -webkit-border-radius: 8px;
     -moz-border-radius: 8px;
          border-radius: 8px;
  -webkit-box-shadow: 0 5px 10px rgba(0,0,0,.2);
     -moz-box-shadow: 0 5px 10px rgba(0,0,0,.2);
          box-shadow: 0 5px 10px rgba(0,0,0,.2);
}

.tt-suggestion {
  padding: 3px 20px;
  font-size: 18px;
  line-height: 24px;
}

.tt-suggestion:hover {
  cursor: pointer;
  color: #fff;
  background-color: #0097cf;
}

.tt-suggestion.tt-cursor {
  color: #fff;
  background-color: #0097cf;

}
.tt-suggestion p {
  margin: 0;
}

/* Styling the button to submit a route */
#submitRoute{
  
}

/* Loading screen styles */

/* 
  Modify the containing main row to
  listen to the vertical alignment hack.
 */
#containerRow{
  -webkit-transform-style: preserve-3d;
  -moz-transform-style: preserve-3d;
  transform-style: preserve-3d;  
  height: calc(100% - $navbar-height-mobile);
}
@media #{$medium-and-up}{
  height: calc(100% - $navbar-height);
}
/*
 * Maximum height of container must be 
 * 100% - (height of navbar)
*/



#green_loader{
  top:  0px;
  left: 0px;
  height: 100%;
  width:  100%;
  position: absolute;
  background: white;
  z-index: 4;
  .loading_content{
    img{
      max-width: 100%;
    }
    top: 50%;
    transform: translateY(-50%);
    position: relative;
    display: block;
    margin: 0 auto;
    text-align: center;
    max-width: 33.333%;
    color: $secondary-color-dark;    
  }  
}

.hidden{
  display:none !important;
}

.max-width{
  width: 100%;
}

/* Hack! Did we fuck up the grid?? */

/// TURN DIRECTIONS STYLES ///////////////////////////////////////////////////////

#routeInfo {
  ul{
    width:60%;
    float: left;
    display:inline-block;
    margin:auto;
    li {
      text-align:center;
    }
    .left {
      width:50%;
    }
    .centerLine {
      float: left;
      width:50%;
      border-right:3px solid #666;
    }
  }
}

.turnDirect {
  height:90%;
  ul {
    position:relative;
    height:100%;
    text-indent:none;
    text-decoration:none;
    list-style-type:none;
    .ui-menu-item {
      color:#666;
      display: inline-block;
      height:11.25%;
      width:100%;
      font-family:Roboto;
      font-weight:300;
      font-size:15px;
      border-bottom:2px solid #ccc;

      li {
        vertical-align: middle;
      }

      .menuitem {
        margin-left:10%;
      }

    }

  }
}

.ui-menu-item:before {
  content: '';
  display: inline-block;
  vertical-align: middle;
}



#listTop {
  height:10%;
}

.destLbl {
  color:#666;
  font-family:Roboto;
  font-size:15px;
  font-weight:300;
}

.distLbl {
  font-family:Roboto-Slab;
  font-weight:400;
  color:#666;
  font-size:20px;
  font-weight:700;
}

.timeLbl {
  font-family:Roboto-Slab;
  font-weight:400;
  color:#666;
  font-size:20px;
  font-weight:700;
}
.HeaderRoute {
  background-color:#fff;
  -moz-border-radius: 0px;
  -webkit-border-radius: 15px 15px 0px 0px;
  border-radius: 15px 15px 0px 0px; 
}

/// TIME SLIDER STYLES ////////////////////////////////////////////////////

/// TOGGLE SWITCHING FOR ROUTE SETUP//////////////////////////////////////////////////////////////////////////

.routeSel {
  height:100%;
  z-index: 2;
  /* So it sits tightly under the navbar */
  display: block;
  position: relative;
  padding:0 !important;
  ul {
    height:100%;
  }
  .nxtBtn {
    width:100%;
    height:10%;

  a {
    height:100%;
    width:100%;
    }
  }
}
.current {
  position:absolute;
  top:0;
}

.introTag {
  margin-top:0;
  font-size:1.5em;
  color:#a1a1a1;
  font-spacing:1px;
  font-family:Roboto;
  letter-spacing:1.2px;
  font-size:1.3em;
  font-weight:100;
  text-align:center;
}

.heightFix {
  height:90%;
}

.col.s2 {
    padding:0 !important;
}

.optSwitch {
  height:90%;

  a {
    padding:10%;
    height:50%;
    width:100%;
  }
  // To vertically center fa elements underneath 
  -webkit-transform-style: preserve-3d;
  -moz-transform-style: preserve-3d;
  transform-style: preserve-3d;
  .fa{
    position: relative;
    top: 50%;
    transform: translateY(-50%);    
  }
}

// TIME SELECTION ----------------------------------------------------

#timeSlider {
  position: relative;
}
#submitRoute {
  left:0;
  right:0;
  margin:auto;
  bottom:20%; 
}
// TIME SELECTION ----------------------------------------------------
#minRange {
  font-size:1.0em;
  font-weight:300;
  text-align:center;
  color: #000;
  width:100%;
  height:50px;
}
#timeRange {
  font-size:1.0em;
  font-weight:300;
  font-family:Roboto-Slab;
  font-size:2.0em;
  font-weight:500;
  text-align:center;
  color: #000;
  color:$primary-color;
  width:100%;
  height:50px;
}
.resize-drag {
  position:relative;
  background-color: $primary-color;
  color: white;
  font-size: 20px;
  font-family: sans-serif;
  border-top:10px solid #4D4D4D;
  border-bottom:10px solid #4D4D4D;
  border-radius: 3px;
  width:50%;
  padding:10px;
  margin:0 auto;
  /* This makes things *much* easier */
  box-sizing: border-box;
}
.resize-drag:after {
  position:absolute;
  width:50%;
}

.resize-drag:after {
  position:absolute;
  width:50%;
}


.resize-container {
  width: 100%;
  height: 60%;
}

//  DESTINATION SELECTION ////////////////////////////////////////////////

.distContainer {
  height:100%;
  position:relative;
  margin:20% 0 50% 0;
}

/// BUTTTON STYLES /////////////////////////////////////////////////////////

.btn-primary {
  @extend .btn;
  position: absolute !important;
  bottom:10%;
  right:5%;
  font-weight:100;
  background-color:$primary-color;

  &:hover {
    background-color:$primary-color;
  }
}

.btn-secondary {
  @extend .btn;
  position: absolute !important;
  bottom:10%;
  left:5%;
  font-weight:100;
  background-color:$secondary-color;

  &:hover {
    background-color:$secondary-color;
  }
}

// styles for form active ///////////////////////////////////

  label.active {
    left:0;
    top:0;
    font-family:Roboto-Slab;
    font-weight:700;
    font-size:1.3em;
    @include transform(translateY(-60%));
  }

